# NexComply-analyser-

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Frameworks/: Frameworks for Security Posture_Review.xlsx
Questionnaires/: Questionaires.xlsx
Risk Reports/: TPRM REPORT TEMPLATE 2.docx  VA Sample Anonymize Report.docx  risk_report_20251227_060816.csv  risk_report_20251227_060816.json  risk_report_20251227_060908.csv  risk_report_20251227_060908.json  risk_report_20251227_061112.csv  risk_report_20251227_061112.json
Session on GRC/: Script for my sessions.docx
docker/: Dockerfile  docker-compose.yml
notebooks/: README.md  secpal.ipynb  secpal2.ipynb
scripts/: cli.py
src/: __init__.py
src/api/: __init__.py  routes.py  schemas.py
src/config/: settings.py
src/data/: __init__.py  framework_loader.py  policy_processor.py
src/nexcomply_analyser/: __init__.py  cli.py  frameworks.py  ingestion.py  parsing.py  questionnaire.py  risk_report.py  utils.py
src/utils/: __init__.py  embeddings.py  reporting.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_cli.py  test_parsing.py
